--- a/arch/x86/configs/cyanogenmod_Z00D_defconfig
+++ b/arch/x86/configs/cyanogenmod_Z00D_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/i386 3.10.20 Kernel Configuration
+# Linux/x86 3.10.20 Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -56,13 +56,13 @@ CONFIG_HAVE_KERNEL_BZIP2=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_BZIP2 is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
@@ -454,13 +454,14 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
+CONFIG_FRONTSWAP=y
 # CONFIG_HIGHPTE is not set
 CONFIG_X86_CHECK_BIOS_CORRUPTION=y
 # CONFIG_X86_BOOTPARAM_MEMORY_CORRUPTION_CHECK is not set
@@ -506,6 +507,7 @@ CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
 # CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
+# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 # CONFIG_PM_AUTOSLEEP is not set
@@ -621,6 +623,8 @@ CONFIG_COREDUMP=y
 CONFIG_HAVE_ATOMIC_IOMAP=y
 CONFIG_HAVE_TEXT_POKE_SMP=y
 # CONFIG_PF450CL is not set
+CONFIG_ZE500CL=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_NET=y
 
 #
@@ -636,7 +640,7 @@ CONFIG_XFRM_USER=y
 CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
-#CONFIG_NET_KEY=y
+CONFIG_NET_KEY=y
 CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
@@ -654,12 +658,12 @@ CONFIG_NET_IP_TUNNEL=y
 # CONFIG_SYN_COOKIES is not set
 # CONFIG_NET_IPVTI is not set
 # CONFIG_INET_AH is not set
-#CONFIG_INET_ESP=y
+CONFIG_INET_ESP=y
 # CONFIG_INET_IPCOMP is not set
 # CONFIG_INET_XFRM_TUNNEL is not set
 CONFIG_INET_TUNNEL=y
-#CONFIG_INET_XFRM_MODE_TRANSPORT=y
-#CONFIG_INET_XFRM_MODE_TUNNEL=y
+CONFIG_INET_XFRM_MODE_TRANSPORT=y
+CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_LRO=y
 CONFIG_INET_DIAG=y
@@ -771,7 +775,7 @@ CONFIG_NETFILTER_XT_TARGET_REDIRECT=y
 # CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
 # CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
-# CONFIG_NETFILTER_XT_TARGET_TCPMSS is not set
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
 #
@@ -880,7 +884,7 @@ CONFIG_IP6_NF_RAW=y
 # CONFIG_RDS is not set
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
-#CONFIG_L2TP=y
+CONFIG_L2TP=y
 # CONFIG_L2TP_DEBUGFS is not set
 # CONFIG_L2TP_V3 is not set
 # CONFIG_BRIDGE is not set
@@ -1222,8 +1226,20 @@ CONFIG_PHYLIB=y
 # CONFIG_FIXED_PHY is not set
 # CONFIG_MDIO_BITBANG is not set
 # CONFIG_MICREL_KS8995MA is not set
-# CONFIG_PPP is not set
+CONFIG_PPP=y
+CONFIG_PPP_BSDCOMP=y
+CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOE=y
+CONFIG_PPPOL2TP=y
+CONFIG_PPPOLAC=y
+CONFIG_PPPOPNS=y
+CONFIG_PPP_ASYNC=y
+CONFIG_PPP_SYNC_TTY=y
 # CONFIG_SLIP is not set
+CONFIG_SLHC=y
 
 #
 # USB Network Adapters
@@ -1312,7 +1328,7 @@ CONFIG_WILINK_PLATFORM_DATA=y
 # Input device support
 #
 CONFIG_INPUT=y
-# CONFIG_INPUT_FF_MEMLESS is not set
+CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_SPARSEKMAP=y
 # CONFIG_INPUT_MATRIXKMAP is not set
@@ -1321,7 +1337,7 @@ CONFIG_INPUT_SPARSEKMAP=y
 # Userland interfaces
 #
 # CONFIG_INPUT_MOUSEDEV is not set
-# CONFIG_INPUT_JOYDEV is not set
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_KEYRESET is not set
@@ -1383,7 +1399,9 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_ZHENHUA is not set
 # CONFIG_JOYSTICK_AS5011 is not set
 # CONFIG_JOYSTICK_JOYDUMP is not set
-# CONFIG_JOYSTICK_XPAD is not set
+CONFIG_JOYSTICK_XPAD=y
+CONFIG_JOYSTICK_XPAD_FF=y
+CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_ACECAD is not set
 # CONFIG_TABLET_USB_AIPTEK is not set
@@ -1428,6 +1446,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
+# CONFIG_TOUCHSCREEN_HIMAX_HX8528_ME372CL is not set
+CONFIG_TOUCHSCREEN_FT3X17=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ARIZONA_HAPTICS is not set
@@ -1453,6 +1473,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_IMS_PCU is not set
 # CONFIG_INPUT_CMA3000 is not set
+CONFIG_SENSORS_AK09911=y
+CONFIG_SENSORS_KXTJ9=y
 
 #
 # Hardware I/O ports
@@ -1608,6 +1630,7 @@ CONFIG_I2C_GPIO=y
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
+CONFIG_I2C_STRESS_TEST=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -1738,8 +1761,7 @@ CONFIG_GPIO_LANGWELL=y
 #
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
-CONFIG_POWER_SUPPLY_CHARGER=y
-CONFIG_POWER_SUPPLY_CHARGING_ALGO_PSE=y
+# CONFIG_POWER_SUPPLY_CHARGER is not set
 CONFIG_POWER_SUPPLY_BATTID=y
 # CONFIG_RAW_CC_THROTTLE is not set
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1751,7 +1773,7 @@ CONFIG_POWER_SUPPLY_BATTID=y
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
-CONFIG_BATTERY_MAX17042=y
+# CONFIG_BATTERY_MAX17042 is not set
 # CONFIG_BATTERY_INTEL_MID is not set
 # CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
@@ -1766,6 +1788,9 @@ CONFIG_BATTERY_MAX17042=y
 # CONFIG_DC_XPWR_CHARGER is not set
 # CONFIG_INTEL_FUEL_GAUGE is not set
 # CONFIG_INTEL_FG_UIFACE is not set
+CONFIG_ME372CG_BATTERY_SMB345=y
+CONFIG_ME372CG_BATTERY_BQ27520=y
+CONFIG_UPI_BATTERY=y
 # CONFIG_POWER_RESET is not set
 # CONFIG_POWER_AVS is not set
 # CONFIG_POWERCAP is not set
@@ -1905,7 +1930,6 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_EMULATION is not set
 # CONFIG_INTEL_POWERCLAMP is not set
 # CONFIG_SOC_THERMAL is not set
-# CONFIG_INTEL_BYT_CR_THERMAL is not set
 CONFIG_DEBUG_THERMAL=y
 CONFIG_WATCHDOG=y
 # CONFIG_WATCHDOG_CORE is not set
@@ -2104,13 +2128,22 @@ CONFIG_VIDEO_V4L2=y
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 CONFIG_VIDEOBUF_GEN=m
 CONFIG_VIDEOBUF_VMALLOC=m
+CONFIG_VIDEOBUF2_CORE=y
+CONFIG_VIDEOBUF2_MEMOPS=y
+CONFIG_VIDEOBUF2_VMALLOC=y
 # CONFIG_VIDEO_V4L2_INT_DEVICE is not set
 # CONFIG_TTPCI_EEPROM is not set
 
 #
 # Media drivers
 #
-# CONFIG_MEDIA_USB_SUPPORT is not set
+CONFIG_MEDIA_USB_SUPPORT=y
+
+#
+# Webcam devices
+#
+CONFIG_USB_VIDEO_CLASS=y
+CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_MEDIA_PCI_SUPPORT is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
@@ -2513,6 +2546,8 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_BYT_MACHINE is not set
 # CONFIG_SND_CHT_MACHINE is not set
 # CONFIG_SND_CTP_MACHINE is not set
+CONFIG_SND_CTP_MACHINE_5647=y
+# CONFIG_SND_CTP_MACHINE_5671 is not set
 CONFIG_SND_INTEL_SST=y
 CONFIG_SND_SST_PLATFORM=y
 CONFIG_SND_SOC_COMMS_SSP=y
@@ -2522,12 +2557,7 @@ CONFIG_SND_SOC_COMMS_SSP=y
 CONFIG_SND_SST_MACHINE=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_ARIZONA=y
-CONFIG_SND_SOC_WM_HUBS=y
-CONFIG_SND_SOC_WM_ADSP=y
-CONFIG_SND_SOC_CS42L73=y
-CONFIG_SND_SOC_WM5102=y
-CONFIG_SND_SOC_WM8994=y
+CONFIG_SND_SOC_RT5647=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -2545,7 +2575,7 @@ CONFIG_HID_GENERIC=y
 #
 # CONFIG_HID_A4TECH is not set
 # CONFIG_HID_ACRUX is not set
-# CONFIG_HID_APPLE is not set
+CONFIG_HID_APPLE=y
 # CONFIG_HID_APPLEIR is not set
 # CONFIG_HID_AUREAL is not set
 # CONFIG_HID_BELKIN is not set
@@ -2555,7 +2585,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
-# CONFIG_HID_ELECOM is not set
+CONFIG_HID_ELECOM=y
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
 # CONFIG_HID_KEYTOUCH is not set
@@ -2570,7 +2600,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_LENOVO_TPKBD is not set
 # CONFIG_HID_LOGITECH is not set
 # CONFIG_HID_MAGICMOUSE is not set
-# CONFIG_HID_MICROSOFT is not set
+CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
 # CONFIG_HID_MULTITOUCH is not set
 # CONFIG_HID_NTRIG is not set
@@ -2583,7 +2613,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_ROCCAT is not set
 # CONFIG_HID_SAITEK is not set
 # CONFIG_HID_SAMSUNG is not set
-# CONFIG_HID_SONY is not set
+CONFIG_HID_SONY=y
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_STEELSERIES is not set
 # CONFIG_HID_SUNPLUS is not set
@@ -3000,7 +3030,9 @@ CONFIG_STAGING=y
 # CONFIG_VT6656 is not set
 # CONFIG_DX_SEP is not set
 # CONFIG_DX_SEP54 is not set
-# CONFIG_ZSMALLOC is not set
+CONFIG_ZSMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
@@ -3053,7 +3085,7 @@ CONFIG_INTEL_SCU_IPC_INTR_MODE=y
 CONFIG_INTEL_SCU_IPC_UTIL=y
 CONFIG_GPIO_INTEL_PMIC=y
 CONFIG_INTEL_MID_POWER_BUTTON=y
-CONFIG_INTEL_PMIC_CHARGER=y
+# CONFIG_INTEL_PMIC_CHARGER is not set
 # CONFIG_INTEL_FG_HELPER is not set
 CONFIG_INTEL_MODEM_NVRAM=y
 # CONFIG_IBM_RTL is not set
@@ -3125,7 +3157,13 @@ CONFIG_HSI_WAKEUP_PACKET_DUMP_LEN=20
 #
 # HSI clients
 #
-# CONFIG_HSI_FFL_TTY is not set
+CONFIG_HSI_FFL_TTY=y
+CONFIG_HSI_FFL_TTY_NAME="IFX"
+CONFIG_HSI_FFL_TTY_FRAME_LENGTH=4096
+CONFIG_HSI_FFL_TTY_HEADER_LENGTH=4
+CONFIG_HSI_FFL_ENSURE_LAST_WORD_NULL=y
+CONFIG_HSI_FFL_TTY_CHANNEL=1
+CONFIG_HSI_FFL_TTY_STATS=y
 CONFIG_HSI_DLP=y
 CONFIG_HSI_DLP_IPC_TTY_NAME="IFX"
 CONFIG_HSI_FLASHING_DEV_NAME="IFX"
@@ -3135,7 +3173,7 @@ CONFIG_HSI_DLP_PDU_LENGTH=4096
 # CONFIG_HSI_DLP_TTY_STATS is not set
 CONFIG_HSI_DLP_HEADER_LENGTH=4
 # CONFIG_HSI_LOGICAL is not set
-CONFIG_MID_PWM=y
+# CONFIG_MID_PWM is not set
 CONFIG_SENSORS_L3G4200D_POLL=y
 CONFIG_SENSORS_LIS3DH_ACC=y
 CONFIG_SENSORS_LPS331AP=y
@@ -3176,16 +3214,16 @@ CONFIG_I2C_DESIGNWARE_PCI_FORK=y
 # CONFIG_TOUCHSCREEN_ATMEL_MXT224 is not set
 # CONFIG_TOUCHSCREEN_R69001_I2C is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT_FORK is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_FORK=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_FORK=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_GOODIX_GT9XX is not set
 CONFIG_INPUT_INTEL_MID_VIBRA=y
 # CONFIG_INPUT_INTEL_MID_VIBRA_PF450CL is not set
-CONFIG_LEDS_INTEL_KPD=y
+CONFIG_LEDS_ASUS_ZC500CL=y
 # CONFIG_LPSS_DMA is not set
 # CONFIG_NFC_PN544_PLATFORM_DATA is not set
 # CONFIG_NFC_FDP_PLATFORM_DATA is not set
-CONFIG_CHARGER_BQ24192=y
+# CONFIG_CHARGER_BQ24192 is not set
 # CONFIG_BQ24261_CHARGER is not set
 CONFIG_DX_SEP_FORK=y
 # CONFIG_PINCTRL_INTEL_MID is not set
@@ -3219,6 +3257,7 @@ CONFIG_PVR_PROC=y
 CONFIG_GFX_RTPM=y
 # CONFIG_R63311_MIPI_VIDEO_MODE is not set
 # CONFIG_SUPPORT_OTM8018B_MIPI_480X854_DISPLAY is not set
+CONFIG_SUPPORT_OTM1284A_MIPI_720X1280_DISPLAY=y
 # CONFIG_SUPPORT_DDS_MIPI_SWITCH is not set
 # CONFIG_SUPPORT_P73L_TWO_LANE is not set
 CONFIG_SUPPORT_TOSHIBA_MIPI_DISPLAY=y
@@ -3260,6 +3299,10 @@ CONFIG_VIDEO_HM2056_RAW=m
 # CONFIG_VIDEO_AP1302 is not set
 # CONFIG_VIDEO_PIXTER is not set
 # CONFIG_VIDEO_OV680 is not set
+CONFIG_VIDEO_TSB=m
+CONFIG_VIDEO_SKY81296=m
+CONFIG_VIDEO_HM2051=m
+CONFIG_VIDEO_GC2155=m
 CONFIG_VIDEO_LM3554=m
 # CONFIG_VIDEO_LM3642 is not set
 # CONFIG_VIDEO_LM3559 is not set
@@ -3815,6 +3858,7 @@ CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
+CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_XZ_DEC=y
@@ -3848,3 +3892,4 @@ CONFIG_OID_REGISTRY=y
 # ASUS_BSP +++ "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
 CONFIG_ASUS_EVT_LOG=y
 # ASUS_BSP --- "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
+CONFIG_BOARD_CTP=y
