--- a/arch/x86/configs/cyanogenmod_Z00D_defconfig
+++ b/arch/x86/configs/cyanogenmod_Z00D_defconfig
@@ -15,6 +15,7 @@ CONFIG_MMU=y
 # CONFIG_MRD7 is not set
 # CONFIG_MRD8 is not set
 # CONFIG_MRD7P05 is not set
+CONFIG_BOARD_CTP=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_GENERIC_ISA_DMA=y
 CONFIG_GENERIC_BUG=y
@@ -622,9 +623,9 @@ CONFIG_BINFMT_MISC=y
 CONFIG_COREDUMP=y
 CONFIG_HAVE_ATOMIC_IOMAP=y
 CONFIG_HAVE_TEXT_POKE_SMP=y
-# CONFIG_PF450CL is not set
+CONFIG_PF450CL=y
 CONFIG_ZE500CL=y
-CONFIG_ANDROID_BINDER_IPC_32BIT=y
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_NET=y
 
 #
@@ -1298,6 +1299,13 @@ CONFIG_WIFI_PLATFORM_DATA=y
 # CONFIG_ATH_CARDS is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_SDIO=y
+# CONFIG_BCM4354 is not set
+CONFIG_BCMDHD_FW_PATH="/asusfw/wifi/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/asusfw/wifi/bcmdhd_aob.cal"
+# CONFIG_DHD_USE_STATIC_BUF is not set
+CONFIG_DHD_USE_SCHED_SCAN=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
@@ -3888,8 +3896,4 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
-
-# ASUS_BSP +++ "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
 CONFIG_ASUS_EVT_LOG=y
-# ASUS_BSP --- "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
-CONFIG_BOARD_CTP=y
