Z00D: defconfig: enable hwbinder domain
Change-Id: If69162bd2b0802ef4d5708644ae10aa1ca6d755e

--- a/arch/x86/configs/lineageos_Z00D_defconfig
+++ b/arch/x86/configs/lineageos_Z00D_defconfig
@@ -3393,6 +3393,7 @@ CONFIG_VIDEO_GC2155=y
 # Android
 #
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
 
 #
 # Firmware Drivers
