--- a/arch/x86/configs/lineageos_Z00D_defconfig
+++ b/arch/x86/configs/lineageos_Z00D_defconfig
@@ -3514,7 +3514,7 @@ CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
-# CONFIG_PSTORE_PMSG is not set
+CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_FTRACE=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
@@ -3682,7 +3682,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_CREDENTIALS is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
-CONFIG_BOOT_PRINTK_DELAY=y
+# CONFIG_BOOT_PRINTK_DELAY is not set
 
 #
 # RCU Debugging
