--- a/arch/x86/configs/lineageos_Z00D_defconfig
+++ b/arch/x86/configs/lineageos_Z00D_defconfig
@@ -1643,7 +1643,7 @@ CONFIG_NVRAM=y
 # CONFIG_HANGCHECK_TIMER is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_TELCLOCK is not set
-CONFIG_DEVPORT=y
+# CONFIG_DEVPORT is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
