--- a/arch/x86/configs/lineageos_Z00D_defconfig
+++ b/arch/x86/configs/lineageos_Z00D_defconfig
@@ -3393,7 +3393,7 @@ CONFIG_VIDEO_GC2155=y
 # Android
 #
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 
 #
 # Firmware Drivers
